<resources>
    <string name="app_name">DispatcherMobile</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="label">Enter RSS URL:</string>
    <string name="sourceURL">http://dispatcher-app.appspot.com/app/</string>
	<string name="sourceURL2">http://vk.com/doc5781880_220324975</string>
	<string name="action_refresh">Refresh</string>

    <!--BUTTONS-->
    <string name="btnRefreshTasks">Refresh Tasks</string>
    <string name="btnCloseApp">Exit</string>
    <string name="btnSendMessage">Send</string>

	<string name="chk_TaskComplete">Check Task as Completed</string>
	<string name="desc">Description</string>
    <string name="labelLoading">Downloading tasks from net</string>
    <string name="labelCompleteTask">Complete Task</string>
    <string name="taskReaderMenuTitleText">Refresh</string>
    <string name="taskReaderMenuRefreshText">Refresh</string>
    <string name="taskReaderMenuExitText">Exit</string>
    <string name="taskReaderMenuSettingsText">Settings</string>
    <string name="buttonLogOff">Log Off</string>
    <string name="buttonExit">Exit App</string>
    <string name="buttonCloseApp">Close App</string>
    <string name="taskReaderMenuSetNewText">Mark Task as NEW</string>
    <string name="taskReaderMenuSetTakedText">Mark Task as TAKED</string>
    <string name="taskReaderMenuSetCompletedText">Mark Task as COMPLETED</string>
    <string name="NewMessage_EditText">New EditText</string>
    <string name="ContactsText">Contacts</string>
    <string name="MessagesText">Messages</string>


    <!--Start items for drawer-->
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Tasks</item>
        <item >Companies</item>
        <item >Settings</item>
        <item>Close App</item>
            </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_task</item>
        <item>@drawable/ic_company</item>
        <item>@drawable/ic_settings</item>
        <item>@drawable/ic_exit</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <string name="action_update">Update</string>
    <string name="taskSelectedMenuItem">Close Task</string>

    <!--End items for drawer-->

    <!--Settings-->
    <string-array name="syncFrequency">
        <item>Instantly</item>
        <item>Every 30 min</item>
        <item>Every Hour</item>
        <item>Never (Update maually)</item>
    </string-array>
    <string-array name="syncFrequencyValues">
        <item>1</item>
        <item>30</item>
        <item>60</item>
        <item>0</item>
    </string-array>

    <string name="pref_enable_notifications">Enable notifications</string>
    <string name="pref_enable_notifications_summary">Sound and text notifications about incoming events</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_user_pass">Set password</string>
    <string name="pref_user_pass_summary">Set your password</string>

    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="select_phone_dialog_text">Select phone to call</string>
    <string name="cancel_button">Cancel</string>
    <string name="call_button">Call</string>
    <string name="search_hint">Enter text here</string>
    <!--end of settings-->
</resources>
