<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/taskReaderMenuRefresh"
        android:orderInCategory="100"
            android:title="@string/taskReaderMenuRefreshText"
        android:showAsAction="always"
            android:icon="@drawable/navigation_refresh"/>
    <item android:id="@+id/taskReaderMenuSettings"
          android:title="@string/taskReaderMenuSettingsText" />
    <item android:id="@+id/taskReaderMenuExit"
          android:title="@string/taskReaderMenuExitText">
        <menu>
            <group android:id="@+id/groupMenuExit"
               >
                <item android:id="@+id/groupMenuLogOff"
                      android:title="@string/buttonLogOff"/>
                <item android:id="@+id/groupMenuCloseApp"
                      android:title="@string/buttonCloseApp"/>
                   </group>
        </menu>

          </item>

</menu>